--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server/server.js",
     "client": "cd client && npm start",
     "install-all": "npm install && cd client && npm install",
-    "build": "cd client && npm run build",
+    "build": "npm install && cd client && npm install && npm run build",
     "start": "node server/server.js"
   },
   "dependencies": {
