--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "paapi5-nodejs-sdk": "^1.1.0",
     "pdfkit": "^0.13.0",
     "sqlite3": "^5.1.6",
     "xlsx": "^0.18.5"
