--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tiptap/extension-color": "^3.10.3",
     "@tiptap/extension-image": "^3.8.0",
     "@tiptap/extension-link": "^3.8.0",
     "@tiptap/extension-table": "^3.8.0",
     "@tiptap/extension-table-cell": "^3.8.0",
     "@tiptap/extension-table-header": "^3.8.0",
     "@tiptap/extension-table-row": "^3.8.0",
+    "@tiptap/extension-text-style": "^3.10.3",
     "@tiptap/react": "^3.8.0",
     "@tiptap/starter-kit": "^3.8.0",
     "axios": "^1.5.0",
