--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@citation-js/plugin-bibtex": "^0.7.21",
+    "@citation-js/plugin-doi": "^0.7.21",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -17,6 +19,7 @@
     "@tiptap/react": "^3.8.0",
     "@tiptap/starter-kit": "^3.8.0",
     "axios": "^1.5.0",
+    "citation-js": "^0.7.21",
     "html2pdf.js": "^0.12.1",
     "i18next": "^23.11.2",
     "react": "^18.2.0",
