--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start": "node server/server.js"
   },
   "dependencies": {
+    "@citation-js/plugin-bibtex": "^0.7.21",
     "axios": "^1.13.1",
     "bcryptjs": "^2.4.3",
+    "citation-js": "^0.7.21",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "express": "^4.18.2",
